Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/7007615/acc2/AccessibilityCheck02.out
AccessibilityCheck02.java:11:14: compiler.err.override.incompatible.ret: (compiler.misc.cant.override: m(java.lang.String), AccessibilityCheck02, m(java.lang.String), p1.D), int, void
1 error
